# rusdoku

./: .gitignore  Cargo.toml  crap.txt  multi_solutions.txt  shell.nix  two_solutions.txt  x.txt
src/: main.rs
