[package]
name = "rusdoku"
version = "0.1.0"
authors = ["sim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intrusive-collections = "^0"
fixed-bitset = "^0"
typenum = "^1"
bit-set = "0.8.0"
bit-vec = "0.8.0"

[profile.release]
debug=true
